--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <version>3.1.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!-- Add support for JSP ... get rid of Eclipse error -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
